fix: src is wrong

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="element">
             <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Древний храм" class="element__image">
             <h3 class="element__title">Карачаевск</h3>
-            <img src="/images/Group.png" alt="Лайк" class="element__like">
+            <img src="./images/Group.png" alt="Лайк" class="element__like">
           </div>
           <div class="element">
             <img src="./images/Mask Group.jpg" alt="Эльбрус" class="element__image">
@@ -74,6 +74,6 @@
       </footer>
     </div>
   </div>
-  <script src="/script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
