--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="page">
     <section class="popup">
       <div class="popup__container">
-        <img src="/images/Close Icon.png" alt="Закрыть" class="popup__close">
+        <img src="./images/Close Icon.png" alt="Закрыть" class="popup__close">
         <p class="popup__title">Редактировать профиль</p>
         <input type="text" class="popup__input popup__input_title">
         <input type="text" class="popup__input popup__input_description">
