--- a/index.html
+++ b/index.html
@@ -34,38 +34,38 @@
               <img src="./images/Edit Button.png" alt="Редактировать" class="profile__edit">
             </div>
           </div>
-          <button class="profile__button"><img src="./images/Vector.png" alt="Добавить" class="profile__vector"></button>
+          <button class="profile__button"></button>
         </section>
         <section class="elements">
           <div class="element">
             <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Древний храм" class="element__image">
             <h3 class="element__title">Карачаевск</h3>
-            <img src="./images/Group.png" alt="Лайк" class="element__like">
+            <button class="element__like"></button>
           </div>
           <div class="element">
             <img src="./images/Mask Group.jpg" alt="Эльбрус" class="element__image">
             <h3 class="element__title">Гора Эльбрус</h3>
-            <img src="./images/Group.png" alt="Лайк" class="element__like">
+            <button class="element__like"></button>
           </div>
           <div class="element">
             <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Лес и горы" class="element__image">
             <h3 class="element__title">Домбай</h3>
-            <img src="./images/Group.png" alt="Лайк" class="element__like">
+            <button class="element__like"></button>
           </div>
           <div class="element">
             <img src="./images/Mask Group.jpg" alt="Эльбрус" class="element__image">
             <h3 class="element__title">Гора Эльбрус</h3>
-            <img src="./images/Group.png" alt="Лайк" class="element__like">
+            <button class="element__like"></button>
           </div>
           <div class="element">
             <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Лес и горы" class="element__image">
             <h3 class="element__title">Домбай</h3>
-            <img src="./images/Group.png" alt="Лайк" class="element__like">
+            <button class="element__like"></button>
           </div>
           <div class="element">
             <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Древний храм" class="element__image">
             <h3 class="element__title">Карачаевск</h3>
-            <img src="./images/Group.png" alt="Лайк" class="element__like">
+            <button class="element__like"></button>
           </div>
         </section>
       </main>
