--- a/index.html
+++ b/index.html
@@ -9,62 +9,64 @@
 </head>
 <body>
   <div class="page">
-    <section class="popup">
+    <div class="popup">
       <div class="popup__container">
-        <img src="./images/Close Icon.png" alt="Закрыть" class="popup__close">
-        <p class="popup__title">Редактировать профиль</p>
-        <input type="text" class="popup__input popup__input_title">
-        <input type="text" class="popup__input popup__input_description">
-        <button class="popup__button">Сохранить</button>
+        <button class="popup__close" type="reset"></button>
+        <h3 class="popup__title">Редактировать профиль</h3>
+        <form class="popup__form" name="profile">
+          <input type="text" class="popup__input popup__input_type_title" name="name">
+          <input type="text" class="popup__input popup__input_type_description" name="description">
+          <button class="popup__button">Сохранить</button>
+        </form>
       </div>
-    </section>
+    </div>
     <div class="page__wrapper">
       <header class="header">
-        <img src="./images/logo.png" alt="Место" class="header__image">
+        <img src="./images/logo.svg" alt="Место" class="header__image">
       </header>
       <main class="main">
         <section class="profile">
-          <div class="profile__left">
+          <div class="profile__user">
             <img src="./images/image.jpg" alt="Фотография профиля" class="profile__avatar">
             <div class="profile__info">
               <div class="profile__texts">
                 <h1 class="profile__title">Жак-Ив Кусто</h1>
-                <h2 class="profile__description">Исследователь океана</h2>
+                <p class="profile__description">Исследователь океана</p>
               </div>
-              <img src="./images/Edit Button.png" alt="Редактировать" class="profile__edit">
+              <button class="profile__edit" type="menu"></button>
             </div>
           </div>
-          <button class="profile__button"></button>
+          <button class="profile__button" type="menu"></button>
         </section>
         <section class="elements">
           <div class="element">
             <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Древний храм" class="element__image">
-            <h3 class="element__title">Карачаевск</h3>
+            <h2 class="element__title">Карачаевск</h2>
             <button class="element__like"></button>
           </div>
           <div class="element">
             <img src="./images/Mask Group.jpg" alt="Эльбрус" class="element__image">
-            <h3 class="element__title">Гора Эльбрус</h3>
+            <h2 class="element__title">Гора Эльбрус</h2>
             <button class="element__like"></button>
           </div>
           <div class="element">
             <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Лес и горы" class="element__image">
-            <h3 class="element__title">Домбай</h3>
+            <h2 class="element__title">Домбай</h2>
             <button class="element__like"></button>
           </div>
           <div class="element">
             <img src="./images/Mask Group.jpg" alt="Эльбрус" class="element__image">
-            <h3 class="element__title">Гора Эльбрус</h3>
+            <h2 class="element__title">Гора Эльбрус</h2>
             <button class="element__like"></button>
           </div>
           <div class="element">
             <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Лес и горы" class="element__image">
-            <h3 class="element__title">Домбай</h3>
+            <h2 class="element__title">Домбай</h2>
             <button class="element__like"></button>
           </div>
           <div class="element">
             <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Древний храм" class="element__image">
-            <h3 class="element__title">Карачаевск</h3>
+            <h2 class="element__title">Карачаевск</h2>
             <button class="element__like"></button>
           </div>
         </section>
@@ -74,6 +76,6 @@
       </footer>
     </div>
   </div>
-  <script src="./script.js"></script>
+  <script src="./scripts/script.js"></script>
 </body>
 </html>
