--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="page">
     <div class="popup">
       <div class="popup__container">
-        <button class="popup__close" type="reset"></button>
+        <button class="popup__close" type="reset" aria-label="Закрыть"></button>
         <h3 class="popup__title">Редактировать профиль</h3>
         <form class="popup__form" name="profile">
           <input type="text" class="popup__input popup__input_type_title" name="name">
@@ -33,41 +33,41 @@
                 <h1 class="profile__title">Жак-Ив Кусто</h1>
                 <p class="profile__description">Исследователь океана</p>
               </div>
-              <button class="profile__edit" type="menu"></button>
+              <button class="profile__edit" type="menu" aria-label="Редактировать"></button>
             </div>
           </div>
-          <button class="profile__button" type="menu"></button>
+          <button class="profile__button" type="menu" aria-label="Добавить"></button>
         </section>
         <section class="elements">
           <div class="element">
             <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Древний храм" class="element__image">
             <h2 class="element__title">Карачаевск</h2>
-            <button class="element__like"></button>
+            <button class="element__like" aria-label="Лайк"></button>
           </div>
           <div class="element">
             <img src="./images/Mask Group.jpg" alt="Эльбрус" class="element__image">
             <h2 class="element__title">Гора Эльбрус</h2>
-            <button class="element__like"></button>
+            <button class="element__like" aria-label="Лайк"></button>
           </div>
           <div class="element">
             <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Лес и горы" class="element__image">
             <h2 class="element__title">Домбай</h2>
-            <button class="element__like"></button>
+            <button class="element__like" aria-label="Лайк"></button>
           </div>
           <div class="element">
             <img src="./images/Mask Group.jpg" alt="Эльбрус" class="element__image">
             <h2 class="element__title">Гора Эльбрус</h2>
-            <button class="element__like"></button>
+            <button class="element__like" aria-label="Лайк"></button>
           </div>
           <div class="element">
             <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Лес и горы" class="element__image">
             <h2 class="element__title">Домбай</h2>
-            <button class="element__like"></button>
+            <button class="element__like" aria-label="Лайк"></button>
           </div>
           <div class="element">
             <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Древний храм" class="element__image">
             <h2 class="element__title">Карачаевск</h2>
-            <button class="element__like"></button>
+            <button class="element__like" aria-label="Лайк"></button>
           </div>
         </section>
       </main>
