--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
-  <script defer src="./scripts/script.js"></script>
-  <script defer src="./scripts/validate.js"></script>
+  <script type="module" defer src="./scripts/script.js"></script>
+  <script type="module" defer src="./scripts/validate.js"></script>
   <title>Место</title>
 </head>
 <body>
