--- a/index.html
+++ b/index.html
@@ -76,8 +76,6 @@
       <button class="element__like" aria-label="Лайк" type="button"></button>
     </div>
   </template>
-  <script type="module" defer src="./scripts/script.js"></script>
-  <script type="module" defer src="./scripts/Card.js"></script>
-  <script type="module" defer src="./scripts/formValidator.js"></script>
+  <script type="module" defer src="./pages/index.js"></script>
 </body>
 </html>
