--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
         <form class="popup-edit__form popup__form" name="profile" novalidate>
           <input type="text" placeholder="Имя" id="name-input" class="popup-edit__input popup-edit__input_type_title popup__input popup__input_type_title" name="name" required minlength="2" maxlength="40">
           <span class="popup__input-error name-input-error"></span>
-          <input type="text" placeholder="О себе" id="description-input" class="popup-edit__input popup-edit__input_type_description popup__input popup__input_type_description" name="description" required minlength="2" maxlength="200">
-          <span class="popup__input-error description-input-error"></span>
+          <input type="text" placeholder="О себе" id="about-input" class="popup-edit__input popup-edit__input_type_about popup__input popup__input_type_about" name="about" required minlength="2" maxlength="200">
+          <span class="popup__input-error about-input-error"></span>
           <button class="popup-edit__button popup__button" type="submit" disabled>Сохранить</button>
         </form>
       </div>
@@ -27,7 +27,7 @@
         <h3 class="popup-element__title popup__title">Новое место</h3>
         <form class="popup-element__form popup__form" name="new-card" novalidate>
           <input type="text" id="title-input" class="popup-element__input popup-element__input_type_title popup__input popup__input_type_title" name="name" placeholder="Название" required minlength="2" maxlength="30">
-          <span class="popup__input-error title-input-error"></span>
+          <span class="popup__input-error name-input-error"></span>
           <input id="link-input" class="popup-element__input popup-element__input_type_description popup__input popup__input_type_description" name="link" placeholder="Ссылка на картинку" required type="url">
           <span class="popup__input-error link-input-error"></span>
           <button class="popup-element__button popup__button" type="submit" disabled>Сохранить</button>
@@ -36,9 +36,36 @@
     </div>
     <div class="popup-image popup">
       <div class="popup-image__container">
-        <button class="popup-image__close popup__close"></button>
+        <button class="popup-image__close popup__close" aria-label="Закрыть" type="button"></button>
         <img class="popup-image__image">
         <p class="popup-image__title"></p>
+      </div>
+    </div>
+    <div class="popup popup-avatar">
+      <div class="popup__container">
+        <button aria-label="Закрыть" type="button" class="popup__close"></button>
+        <h3 class="popup__title">Обновить аватар</h3>
+        <form name="form" class="popup__form popup-avatar__form">
+          <div class="popup__input-container">
+            <input
+              placeholder="Ссылка на картинку" name="link" required type="url" class="popup__input"
+            />
+            <span class="popup__input-error link-input-error"></span>
+          </div>
+          <button type="submit" class="popup__button">
+            Сохранить
+          </button>
+        </form>
+      </div>
+    </div>
+
+    <div class="popup popup-delete">
+      <div class="popup__container">
+        <button aria-label="Закрыть" type="button" class="popup__close"></button>
+        <h3 class="popup__title">Вы уверены?</h3>
+        <form name="form" class="popup__form">
+          <button type="submit" class="popup__button">Да</button>
+        </form>
       </div>
     </div>
     <div class="page__wrapper">
@@ -48,11 +75,11 @@
       <main class="main">
         <section class="profile">
           <div class="profile__user">
-            <img src="<%=require('./images/image.jpg')%>" alt="Фотография профиля" class="profile__avatar">
+              <img src="<%=require('./images/image.jpg')%>" alt="Фотография профиля" class="profile__avatar">
             <div class="profile__info">
               <div class="profile__texts">
                 <h1 class="profile__title">Жак-Ив Кусто</h1>
-                <p class="profile__description">Исследователь океана</p>
+                <p class="profile__about">Исследователь океана</p>
               </div>
               <button class="profile__edit" type="button" aria-label="Редактировать"></button>
             </div>
@@ -71,8 +98,13 @@
     <div class="element">
       <button class="element__delete" type="button" aria-label="Удалить"></button>
       <img class="element__image">
-      <h2 class="element__title"></h2>
-      <button class="element__like" aria-label="Лайк" type="button"></button>
+      <div class="element__text-container">
+        <h2 class="element__title"></h2>
+        <div class="element__like-container">
+          <button class="element__like" aria-label="Лайк" type="button"></button>
+          <p class="element__like-count"></p>
+        </div>
+      </div>
     </div>
   </template>
   <script type="module" defer src="./pages/index.js"></script>
